Fix quality gate issues